# digidrum

./: Cargo.toml  README.md
src/: app.rs  calibration.rs  camera.rs  detect.rs  main.rs  midi_out.rs  pad.rs  preset_io.rs
src/audio/: mod.rs  samples.rs  voices.rs
