[package]
name = "drum-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI + windowing + GPU
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"

# Camera capture
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", default-features = false }

# Audio
cpal = "0.17"
hound = "3.5"

# Lock-free / realtime primitives
crossbeam-queue = "0.3"
arc-swap = "1.7"

# Math
glam = "0.29"
nalgebra = "0.33"

# MIDI
midir = "0.10"

# Persistence / file dialogs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

# Error handling / logging
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1  # keep debug build responsive enough for realtime audio/video
